Eliminate the usage of deprecated ClientObject.set( String, Object)
Format the code and use some static imports