@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2012 EclipseSource and others.
+ * Copyright (c) 2009, 2013 EclipseSource and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,22 +10,27 @@
  ******************************************************************************/
 package org.eclipse.swt.internal.custom.ccombokit;
 
+import static org.eclipse.rap.rwt.internal.json.JsonUtil.createJsonArray;
+import static org.eclipse.rap.rwt.internal.protocol.ClientObjectFactory.getClientObject;
+import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.getStyles;
+import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.hasChanged;
 import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.preserveListener;
 import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.preserveProperty;
+import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.readPropertyValue;
 import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.renderListener;
 import static org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil.renderProperty;
+import static org.eclipse.rap.rwt.lifecycle.WidgetUtil.getAdapter;
+import static org.eclipse.rap.rwt.lifecycle.WidgetUtil.getId;
 
 import java.io.IOException;
 
-import org.eclipse.rap.rwt.internal.protocol.ClientObjectFactory;
 import org.eclipse.rap.rwt.internal.protocol.IClientObject;
 import org.eclipse.rap.rwt.internal.util.NumberFormatUtil;
 import org.eclipse.rap.rwt.lifecycle.AbstractWidgetLCA;
 import org.eclipse.rap.rwt.lifecycle.ControlLCAUtil;
-import org.eclipse.rap.rwt.lifecycle.WidgetAdapter;
 import org.eclipse.rap.rwt.lifecycle.ProcessActionRunner;
+import org.eclipse.rap.rwt.lifecycle.WidgetAdapter;
 import org.eclipse.rap.rwt.lifecycle.WidgetLCAUtil;
-import org.eclipse.rap.rwt.lifecycle.WidgetUtil;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.CCombo;
 import org.eclipse.swt.graphics.Point;
@@ -57,6 +62,7 @@ public final class CComboLCA extends AbstractWidgetLCA {
   private static final Point DEFAULT_SELECTION = new Point( 0, 0 );
   private static final int DEFAULT_VISIBLE_ITEM_COUNT = 5;
 
+  @Override
   public void preserveValues( Widget widget ) {
     CCombo ccombo = ( CCombo )widget;
     ControlLCAUtil.preserveValues( ccombo );
@@ -79,11 +85,11 @@ public final class CComboLCA extends AbstractWidgetLCA {
 
   public void readData( Widget widget ) {
     CCombo ccombo = ( CCombo )widget;
-    String value = WidgetLCAUtil.readPropertyValue( ccombo, "selectionIndex" );
+    String value = readPropertyValue( ccombo, "selectionIndex" );
     if( value != null ) {
       ccombo.select( NumberFormatUtil.parseInt( value ) );
     }
-    String listVisible = WidgetLCAUtil.readPropertyValue( ccombo, "listVisible" );
+    String listVisible = readPropertyValue( ccombo, "listVisible" );
     if( listVisible != null ) {
       ccombo.setListVisible( Boolean.valueOf( listVisible ).booleanValue() );
     }
@@ -96,15 +102,17 @@ public final class CComboLCA extends AbstractWidgetLCA {
     WidgetLCAUtil.processHelp( ccombo );
   }
 
+  @Override
   public void renderInitialization( Widget widget ) throws IOException {
     CCombo ccombo = ( CCombo )widget;
-    IClientObject clientObject = ClientObjectFactory.getClientObject( ccombo );
+    IClientObject clientObject = getClientObject( ccombo );
     clientObject.create( TYPE );
-    clientObject.set( "parent", WidgetUtil.getId( ccombo.getParent() ) );
-    clientObject.set( "style", WidgetLCAUtil.getStyles( ccombo, ALLOWED_STYLES ) );
+    clientObject.set( "parent", getId( ccombo.getParent() ) );
+    clientObject.set( "style", createJsonArray( getStyles( ccombo, ALLOWED_STYLES ) ) );
     clientObject.set( "ccombo", true );
   }
 
+  @Override
   public void renderChanges( Widget widget ) throws IOException {
     CCombo ccombo = ( CCombo )widget;
     ControlLCAUtil.renderChanges( ccombo );
@@ -128,7 +136,7 @@ public final class CComboLCA extends AbstractWidgetLCA {
 
   private static void readTextAndSelection( final CCombo ccombo ) {
     final Point selection = readSelection( ccombo );
-    final String txt = WidgetLCAUtil.readPropertyValue( ccombo, "text" );
+    final String txt = readPropertyValue( ccombo, "text" );
     if( txt != null ) {
       if( ccombo.isListening( SWT.Verify ) ) {
         // setText needs to be executed in a ProcessAcction runnable as it may
@@ -139,7 +147,7 @@ public final class CComboLCA extends AbstractWidgetLCA {
             ccombo.setText( txt );
             // since text is set in process action, preserved values have to be
             // replaced
-            WidgetAdapter adapter = WidgetUtil.getAdapter( ccombo );
+            WidgetAdapter adapter = getAdapter( ccombo );
             adapter.preserve( PROP_TEXT, txt );
             if( selection != null ) {
               ccombo.setSelection( selection );
@@ -160,8 +168,8 @@ public final class CComboLCA extends AbstractWidgetLCA {
 
   private static Point readSelection( CCombo ccombo ) {
     Point result = null;
-    String selStart = WidgetLCAUtil.readPropertyValue( ccombo, "selectionStart" );
-    String selLength = WidgetLCAUtil.readPropertyValue( ccombo, "selectionLength" );
+    String selStart = readPropertyValue( ccombo, "selectionStart" );
+    String selLength = readPropertyValue( ccombo, "selectionLength" );
     if( selStart != null || selLength != null ) {
       result = new Point( 0, 0 );
       if( selStart != null ) {
@@ -178,10 +186,9 @@ public final class CComboLCA extends AbstractWidgetLCA {
   // Helping methods to write changed properties
 
   private static void renderItemHeight( CCombo ccombo ) {
-    Integer newValue = new Integer( ccombo.getItemHeight() );
-    if( WidgetLCAUtil.hasChanged( ccombo, PROP_ITEM_HEIGHT, newValue ) ) {
-      IClientObject clientObject = ClientObjectFactory.getClientObject( ccombo );
-      clientObject.set( PROP_ITEM_HEIGHT, newValue );
+    Integer newValue = Integer.valueOf( ccombo.getItemHeight() );
+    if( hasChanged( ccombo, PROP_ITEM_HEIGHT, newValue ) ) {
+      getClientObject( ccombo ).set( PROP_ITEM_HEIGHT, newValue.intValue() );
     }
   }
 
@@ -199,7 +206,7 @@ public final class CComboLCA extends AbstractWidgetLCA {
   }
 
   private static void renderSelectionIndex( CCombo ccombo ) {
-    Integer newValue = new Integer( ccombo.getSelectionIndex() );
+    Integer newValue = Integer.valueOf( ccombo.getSelectionIndex() );
     boolean selectionChanged
       = WidgetLCAUtil.hasChanged( ccombo, PROP_SELECTION_INDEX, newValue, DEFAULT_SELECTION_INDEX );
     // The 'textChanged' statement covers the following use case:
@@ -208,10 +215,9 @@ public final class CComboLCA extends AbstractWidgetLCA {
     // ccombo.removeAll();  ccombo.add( "b" );  ccombo.select( 0 );
     // When only examining selectionIndex, a change cannot be determined
     boolean textChanged = !ccombo.getEditable()
-                          && WidgetLCAUtil.hasChanged( ccombo, PROP_TEXT, ccombo.getText(), "" );
+                          && hasChanged( ccombo, PROP_TEXT, ccombo.getText(), "" );
     if( selectionChanged || textChanged ) {
-      IClientObject clientObject = ClientObjectFactory.getClientObject( ccombo );
-      clientObject.set( PROP_SELECTION_INDEX, newValue );
+      getClientObject( ccombo ).set( PROP_SELECTION_INDEX, newValue.intValue() );
     }
   }
 
